kubernetes/apps/plex/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-plex
  namespace: htpc
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "plex.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: plex
      port: 32400
